# pokecards

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
pokecards/: __about__.py  __init__.py  card.py  cli.py  main.py  model.py
tests/: __init__.py
