[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokecards"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Domenic Barbuzzi", email = "dbarbuzzi@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pokebase~=1.3.0", "rich~=12.6.0"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black~=22.10",
  "flake8~=5.0.4",
  "isort~=5.10.1",
  "pytest~=7.1.3",
  "pytest-cov~=4.0"
]

[project.scripts]
pokecards = "pokecards:main"

[project.urls]
Documentation = "https://github.com/dbarbuzzi/pokecards#readme"
Issues = "https://github.com/dbarbuzzi/pokecards/issues"
Source = "https://github.com/dbarbuzzi/pokecards"

[tool.hatch.version]
path = "pokecards/__about__.py"

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.dev.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pokecards --cov=tests {args}"
no-cov = "cov --no-cov {args}"
check = [
  "black --check --diff .",
  "isort --check --diff .",
  "flake8 ."
]
fmt = [
  "isort .",
  "black .",
  "check",
]

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["pokecards/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
